--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         document.addEventListener('DOMContentLoaded', async () => {
             console.log('DOMContentLoaded: HTML要素の読み込みが完了しました。');
 
-            const correctPassword = '充電無いよ‼️'; // 設定するパスワード
+            const correctPassword = 'ohayou-ruruRaider'; // 設定するパスワード
 
             // HTML要素の取得
             const passwordInput = document.getElementById('passwordInput');
