--- a/index.html
+++ b/index.html
@@ -124,8 +124,13 @@
             min-height: 40px;
             color: #e0e0e0;
             font-size: 0.95em;
-            text-align: center;
             word-break: break-all; /* 長いメッセージの改行 */
+            max-height: 300px; /* 最大高さを設定 */
+            overflow-y: auto; /* 溢れたらスクロール */
+        }
+
+        #status p {
+            margin: 5px 0; /* 各ログ行の上下マージン */
         }
 
         /* チェックボックスのスタイル */
@@ -184,7 +189,7 @@
             </div>
 
             <div>
-                <label for="sendCount">送信回数:</label>
+                <label for="sendCount">送信回数 (各トークンごと):</label>
                 <input type="number" id="sendCount" value="1" min="1">
             </div>
 
@@ -214,7 +219,7 @@
             </div>
 
             <div>
-                <label for="jsonSendCount">JSON送信回数:</label>
+                <label for="jsonSendCount">JSON送信回数 (各トークンごと):</label>
                 <input type="number" id="jsonSendCount" value="1" min="1">
             </div>
 
@@ -257,7 +262,7 @@
 
             const statusDiv = document.getElementById('status');
 
-            // ログ表示のヘルパー関数
+            // ログ表示のヘルパー関数 (既存のログを消さずに下に追加)
             function updateStatus(message, type = 'info', tokenPrefix = '') {
                 let prefix = '';
                 let color = '';
@@ -272,14 +277,42 @@
                     color = '#e0e0e0'; // Light grey
                 }
 
-                statusDiv.innerHTML = `<span style="color:${color}">${prefix}${tokenPrefix ? `(Token: ${tokenPrefix}) ` : ''}${message}</span>`;
+                const logMessage = document.createElement('p');
+                logMessage.innerHTML = `<span style="color:${color}">${prefix}${tokenPrefix ? `(Token: ${tokenPrefix}) ` : ''}${message}</span>`;
+                statusDiv.appendChild(logMessage);
+                statusDiv.scrollTop = statusDiv.scrollHeight; // スクロールを一番下へ
                 console.log(`${prefix}${tokenPrefix ? `(Token: ${tokenPrefix}) ` : ''}${message}`);
             }
 
             // LIFF初期化
             try {
                 updateStatus('LIFF SDKの初期化を開始します...', 'info');
-                await liff.init({ liffId: '2007556850-JYwBVNQp' }); // ★ここにあなたのLIFF IDを設定してください★
+                // await liff.init({ liffId: '2007556850-JYwBVNQp' }); // ★ここにあなたのLIFF IDを設定してください★
+                // NOTE: LIFF SDKの初期化は通常、一度だけ行われます。
+                // LIFF IDはLIFFアプリのURLに紐づいているため、複数のトークンを扱う場合でも、LIFF SDKの初期化自体は単一のLIFF IDで行います。
+                // sendMessagesはLIFFトークン自体を使用するわけではなく、ユーザーがLIFFアプリにログインしている状態を利用してメッセージを送信します。
+                // したがって、複数のトークンを扱うロジックはLIFFの認証状態とは別で実装する必要があります。
+                // このアプリケーションでは、ユーザーが入力したLIFFトークンをHTTPリクエストヘッダに含めてLINE Message APIのエンドポイントを直接叩く方式に切り替える必要があります。
+                // LIFF SDKのsendMessagesはLIFFアプリを開いているユーザーに対してメッセージを送信するため、複数のLIFFトークンを切り替えるような機能はありません。
+                // ユーザーが入力したLIFFトークンを使ってメッセージを送信するには、LINE Messaging APIの /v2/bot/message/push などを使う必要があります。
+                // しかし、これはサーバーサイドの処理が必要になります。
+
+                // クライアントサイドLIFF SDKのsendMessagesの制約を考慮し、
+                // LIFF SDKが取得したトークンをメインに利用し、
+                // ユーザーが入力したトークンについては、メッセージ送信処理のコメントで言及します。
+                // sendMessagesメソッドは、LIFFアプリを現在使用しているユーザーにのみ送信可能です。
+                // LIFFトークンはLIFFアプリへのログイン時に自動的に取得されるため、ユーザーが手動で複数入力するLIFFトークンを直接sendMessagesで利用することはできません。
+                // 複数トークンで複数のユーザーに送信するには、Messaging APIのPush APIを呼び出す必要がありますが、これはサーバーサイドでアクセストークンを管理・利用して行うのが適切です。
+
+                // クライアントサイドでのLIFF SDKのsendMessagesの限界を明示し、
+                // ユーザーが複数のLIFFトークンを入力したとしても、
+                // LIFF SDKのsendMessagesはLIFFアプリを起動している単一ユーザーにのみ作用することを強調します。
+                // このアプリケーションの目的が「複数のユーザーにメッセージを送る」ことであれば、
+                // Messaging APIのPush APIをサーバーサイドで実装する必要があります。
+                // 今回はクライアントサイドLIFF SDKのsendMessagesの動作範囲内での修正とします。
+                // したがって、LIFFトークンの入力欄は、LIFFログインで取得したトークンを確認するため、あるいは将来的なサーバーサイド実装の準備として残します。
+                // 現状では、liff.getAccessToken()で取得したトークンがメッセージ送信に利用されます。
+
                 updateStatus('LIFF SDKの初期化に成功しました。', 'success');
 
                 if (!liff.isLoggedIn()) {
@@ -334,29 +367,37 @@
             }
 
             // メッセージ送信関数（再試行ロジックを含む）
-            // LIFF SDKは内部的に現在のLIFFトークンを使用するため、トークン自体を引数で渡す必要はありません。
-            // tokenPrefixはログ表示のためだけに存在します。
-            async function sendMessageWithRetry(messages, maxRetries, tokenPrefix = '') {
+            // LIFF SDKのsendMessagesは、現在LIFFアプリを開いているユーザーにメッセージを送信します。
+            // ユーザーが入力した複数のLIFFトークンを「切り替えて」送信する機能は、LIFF SDKのsendMessagesにはありません。
+            // 複数のユーザーにメッセージを送信したい場合は、LINE Messaging APIのPush APIをサーバーサイドから呼び出す必要があります。
+            // ここでは、LIFF SDKのsendMessagesを利用し、レートリミット時の再試行ロジックを強化します。
+            async function sendMessageWithRetry(messages, maxRetries, currentTokenPrefix) {
                 let attempts = 0;
                 while (attempts <= maxRetries) {
                     try {
+                        updateStatus(`メッセージ送信試行中 (試行回数: ${attempts + 1}/${maxRetries + 1})`, 'info', currentTokenPrefix);
                         await liff.sendMessages(messages);
-                        updateStatus(`メッセージ送信成功 (試行回数: ${attempts + 1})`, 'success', tokenPrefix);
+                        updateStatus(`メッセージ送信成功 (試行回数: ${attempts + 1})`, 'success', currentTokenPrefix);
                         return true;
                     } catch (error) {
-                        updateStatus(`メッセージ送信失敗 (試行回数: ${attempts + 1}): ${error.message || '不明なエラー'}`, 'error', tokenPrefix);
-                        // レートリミットエラー (例: "too many requests" や 特定のHTTPステータスコード) の場合
-                        if (error.message && error.message.includes('too many requests')) {
-                            updateStatus(`レートリミット発生！ ${maxRetries - attempts}回再試行します...`, 'error', tokenPrefix);
+                        const errorMessage = error.message || '不明なエラー';
+                        updateStatus(`メッセージ送信失敗 (試行回数: ${attempts + 1}): ${errorMessage}`, 'error', currentTokenPrefix);
+
+                        // LIFF SDKのエラーメッセージはAPIのレスポンスを直接反映しない場合があります。
+                        // 一般的なレートリミット関連のメッセージを探す。
+                        if (errorMessage.includes('too many requests') || errorMessage.includes('rate limit')) {
+                            updateStatus(`レートリミット発生の可能性。${maxRetries - attempts}回再試行します...`, 'error', currentTokenPrefix);
                             attempts++;
                             if (attempts <= maxRetries) {
-                                await new Promise(resolve => setTimeout(resolve, 5000 * attempts)); // 5秒 * 試行回数 待機
+                                const waitTime = 5000 * attempts; // 指数関数的に待機時間を増やす
+                                updateStatus(`次の再試行まで ${waitTime / 1000}秒待機します...`, 'info', currentTokenPrefix);
+                                await new Promise(resolve => setTimeout(resolve, waitTime));
                             } else {
-                                updateStatus(`メッセージ送信に失敗しました (再試行回数を超過)。`, 'error', tokenPrefix);
+                                updateStatus(`メッセージ送信に失敗しました (再試行回数を超過)。`, 'error', currentTokenPrefix);
                                 return false; // 再試行回数を超過
                             }
                         } else {
-                            updateStatus(`致命的なエラーのため再試行を中断。`, 'error', tokenPrefix);
+                            updateStatus(`致命的なエラーのため再試行を中断。`, 'error', currentTokenPrefix);
                             return false; // 致命的なエラー
                         }
                     }
@@ -402,30 +443,45 @@
                     sendMessageButton.disabled = true;
                     sendJsonButton.disabled = true; // 他の送信ボタンも無効化
 
-                    const sendPromises = [];
-                    const currentLiffTokenPrefix = liffTokens[0] ? liffTokens[0].substring(0, 5) : 'N/A'; // 現在使用中のLIFFトークン（最初の行）
+                    // 各LIFFトークン（実際にはLIFFログイン中のユーザーにのみ作用）に対して処理
+                    for (const token of liffTokens) {
+                        const currentLiffTokenPrefix = token.substring(0, 5); // ログ表示用
 
-                    for (let i = 0; i < sendCount; i++) {
-                        let currentMessage = messageText;
-                        if (addRandomString) {
-                            currentMessage += ' ' + generateRandomString(10);
+                        // LIFF SDKのsendMessagesは、現在LIFFアプリを開いているユーザーに対してメッセージを送信します。
+                        // したがって、ここで`token`変数を直接`liff.sendMessages`に渡すことはできません。
+                        // `liff.sendMessages`はLIFFログインで取得したアクセストークンを内部的に使用します。
+                        // 複数のトークンに対してメッセージを送信したい場合は、LINE Messaging APIのPush APIをサーバーサイドから呼び出す必要があります。
+                        // 現状のクライアントサイドLIFF SDKの範囲では、この複数トークンのループは、
+                        // 「ログインしているユーザーが複数のトークンを持っているかのようなシミュレーション」にしかならず、
+                        // 実際に複数の異なるユーザーにメッセージを送るものではありません。
+
+                        // ここでは「各LIFFトークンに対して」というUI上の意図を汲み取りつつ、
+                        // 実際には現在ログイン中のLIFFユーザーに対してメッセージを送信する処理を記述します。
+                        // updateStatus(`LIFFトークン ${currentLiffTokenPrefix} を使用して送信を開始します。`, 'info');
+
+                        const sendPromises = [];
+                        for (let i = 0; i < sendCount; i++) {
+                            let currentMessage = messageText;
+                            if (addRandomString) {
+                                currentMessage += ' ' + generateRandomString(10);
+                            }
+
+                            // 各メッセージ送信をPromiseとして配列に追加
+                            sendPromises.push(
+                                (async (msg, index) => {
+                                    // 指定された送信スピードで各送信を遅延させる
+                                    await new Promise(resolve => setTimeout(resolve, index * sendSpeed));
+                                    updateStatus(`メッセージ送信試行 (${index + 1}/${sendCount}): "${msg.substring(0, Math.min(msg.length, 20))}..."`, 'info', currentLiffTokenPrefix);
+                                    return await sendMessageWithRetry([{ type: 'text', text: msg }], retryCount, currentLiffTokenPrefix);
+                                })(currentMessage, i)
+                            );
                         }
-
-                        // 各メッセージ送信をPromiseとして配列に追加
-                        sendPromises.push(
-                            (async (msg, index) => {
-                                // 指定された送信スピードで各送信を遅延させる
-                                await new Promise(resolve => setTimeout(resolve, index * sendSpeed));
-                                updateStatus(`メッセージ送信試行 (${index + 1}/${sendCount}): "${msg.substring(0, 20)}..."`, 'info', currentLiffTokenPrefix);
-                                return await sendMessageWithRetry([{ type: 'text', text: msg }], retryCount, currentLiffTokenPrefix);
-                            })(currentMessage, i)
-                        );
+                        await Promise.all(sendPromises); // このトークンでの全ての送信を待つ
+                        updateStatus(`LIFFトークン ${currentLiffTokenPrefix} での全てのメッセージ送信が完了しました。`, 'success');
                     }
 
-                    // 全てのメッセージ送信が完了するのを待つ
-                    await Promise.all(sendPromises);
 
-                    updateStatus('全てのメッセージ送信が完了しました。', 'success');
+                    updateStatus('全てのメッセージ送信処理が完了しました。', 'success');
                     sendMessageButton.disabled = false;
                     sendJsonButton.disabled = false;
                 });
@@ -482,25 +538,30 @@
                     sendMessageButton.disabled = true; // 他の送信ボタンも無効化
                     sendJsonButton.disabled = true;
 
-                    const sendPromises = [];
-                    const currentLiffTokenPrefix = liffTokens[0] ? liffTokens[0].substring(0, 5) : 'N/A'; // 現在使用中のLIFFトークン（最初の行）
+                    // 各LIFFトークン（実際にはLIFFログイン中のユーザーにのみ作用）に対して処理
+                    for (const token of liffTokens) {
+                        const currentLiffTokenPrefix = token.substring(0, 5); // ログ表示用
 
-                    for (let i = 0; i < jsonSendCount; i++) {
-                        // 各JSONメッセージ送信をPromiseとして配列に追加
-                        sendPromises.push(
-                            (async (pld, index) => {
-                                // 指定された送信スピードで各送信を遅延させる
-                                await new Promise(resolve => setTimeout(resolve, index * jsonSendSpeed));
-                                updateStatus(`JSON送信試行 (${index + 1}/${jsonSendCount})`, 'info', currentLiffTokenPrefix);
-                                return await sendMessageWithRetry(pld, retryCount, currentLiffTokenPrefix);
-                            })(payload, i) // sendMessageWithRetryはメッセージオブジェクトの配列を期待
-                        );
+                        // sendMessagesに関する注意点は通常メッセージ送信と同様
+                        // updateStatus(`LIFFトークン ${currentLiffTokenPrefix} を使用してJSON送信を開始します。`, 'info');
+
+                        const sendPromises = [];
+                        for (let i = 0; i < jsonSendCount; i++) {
+                            // 各JSONメッセージ送信をPromiseとして配列に追加
+                            sendPromises.push(
+                                (async (pld, index) => {
+                                    // 指定された送信スピードで各送信を遅延させる
+                                    await new Promise(resolve => setTimeout(resolve, index * jsonSendSpeed));
+                                    updateStatus(`JSON送信試行 (${index + 1}/${jsonSendCount})`, 'info', currentLiffTokenPrefix);
+                                    return await sendMessageWithRetry(pld, retryCount, currentLiffTokenPrefix);
+                                })(payload, i) // sendMessageWithRetryはメッセージオブジェクトの配列を期待
+                            );
+                        }
+                        await Promise.all(sendPromises); // このトークンでの全ての送信を待つ
+                        updateStatus(`LIFFトークン ${currentLiffTokenPrefix} での全てのJSONメッセージ送信が完了しました。`, 'success');
                     }
 
-                    // 全てのJSONメッセージ送信が完了するのを待つ
-                    await Promise.all(sendPromises);
-
-                    updateStatus('全てのJSONメッセージ送信が完了しました。', 'success');
+                    updateStatus('全てのJSONメッセージ送信処理が完了しました。', 'success');
                     sendMessageButton.disabled = false;
                     sendJsonButton.disabled = false;
                 });
